Name:		encoding
Version:	0.5.0
Author:		Henning Günther
Maintainer:	h.guenther@tu-bs.de
License:	BSD3
Synopsis:	A library for various character encodings
Description:
	Haskell has excellect handling of unicode, the Char type covers all unicode chars. Unfortunatly, there's no possibility to read or write something to the outer world in an encoding other than ascii due to the lack of support for encodings. This library should help with that.
Category:	Codec
Homepage:	http://code.haskell.org/encoding/
Cabal-Version:	>=1.2
Build-Type:	Simple

Flag splitBase
  description:	Choose the new smaller, split-up base package.

Library
  if flag(splitBase)
    Build-Depends:	bytestring, base >= 3, binary, mtl, containers, extensible-exceptions, array, template-haskell, regex-compat
  else
    Build-Depends:	base < 3, binary, extensible-exceptions, template-haskell

  Exposed-Modules:
    Data.Encoding
    Data.Encoding.ByteSource
    Data.Encoding.ByteSink
    Data.Encoding.Exception
    Control.Throws
    Data.Encoding.ASCII
    Data.Encoding.UTF8
    Data.Encoding.UTF16
    Data.Encoding.UTF32
    Data.Encoding.KOI8R
    Data.Encoding.KOI8U
    Data.Encoding.ISO88591
    Data.Encoding.ISO88592
    Data.Encoding.ISO88593
    Data.Encoding.ISO88594
    Data.Encoding.ISO88595
    Data.Encoding.ISO88596
    Data.Encoding.ISO88597
    Data.Encoding.ISO88598
    Data.Encoding.ISO88599
    Data.Encoding.ISO885910
    Data.Encoding.ISO885911
    Data.Encoding.ISO885913
    Data.Encoding.ISO885914
    Data.Encoding.ISO885915
    Data.Encoding.ISO885916
    Data.Encoding.CP1250
    Data.Encoding.CP1251
    Data.Encoding.CP1252
    Data.Encoding.CP1253
    Data.Encoding.CP1254
    Data.Encoding.CP1255
    Data.Encoding.CP1256
    Data.Encoding.CP1257
    Data.Encoding.CP1258
    Data.Encoding.GB18030
    Data.Encoding.Helper.Template
    Data.Encoding.BootString
    Data.Encoding.MacOSRoman
    Data.Encoding.JISX0201
    Data.Encoding.JISX0208
    Data.Encoding.JISX0212
    Data.Encoding.ISO2022
    Data.Encoding.ISO2022JP
    System.IO.Encoding